Fix: Add frontend build process and compiled dist folder

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "iwallet-backend",
   "version": "1.0.0",
   "description": "Backend para gestor de gastos personales",
-  "main": "server-production.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server-production.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'Backend ready for production'",
+    "build": "cd front && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
